--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -16,21 +16,23 @@ import Accessibility from "./assets/accessibility.png";
 import Theming from "./assets/theming.png";
 import AddonLibrary from "./assets/addon-library.png";
 
-export const RightArrow = () => <svg 
-    viewBox="0 0 14 14" 
-    width="8px" 
-    height="14px" 
-    style={{ 
-      marginLeft: '4px',
-      display: 'inline-block',
-      shapeRendering: 'inherit',
-      verticalAlign: 'middle',
-      fill: 'currentColor',
-      'path fill': 'currentColor'
+export const RightArrow = () => (
+  <svg
+    viewBox="0 0 14 14"
+    width="8px"
+    height="14px"
+    style={{
+      marginLeft: "4px",
+      display: "inline-block",
+      shapeRendering: "inherit",
+      verticalAlign: "middle",
+      fill: "currentColor",
+      "path fill": "currentColor",
     }}
->
-  <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
-</svg>
+  >
+    <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
+  </svg>
+);
 
 <Meta title="Configure your project" />
 
@@ -39,6 +41,7 @@ export const RightArrow = () => <svg
     # Configure your project
 
     Because Storybook works separately from your app, you'll need to configure it for your specific stack and setup. Below, explore guides for configuring Storybook with popular frameworks and tools. If you get stuck, learn how you can ask for help from our community.
+
   </div>
   <div className="sb-section">
     <div className="sb-section-item">
@@ -49,8 +52,8 @@ export const RightArrow = () => <svg
         height={0}
         style={{ width: '100%', height: 'auto' }}
       />
-      <h4 className="sb-section-item-heading">Add styling and CSS</h4>
-      <p className="sb-section-item-paragraph">Like with web applications, there are many ways to include CSS within Storybook. Learn more about setting up styling within Storybook.</p>
+      <div className="sb-section-item-heading">Add styling and CSS<div>
+      <div className="sb-section-item-paragraph">Like with web applications, there are many ways to include CSS within Storybook. Learn more about setting up styling within Storybook.</div>
       <a
         href="https://storybook.js.org/docs/configure/styling-and-css/?renderer=react"
         target="_blank"
@@ -64,8 +67,8 @@ export const RightArrow = () => <svg
         src={Context}
         alt="An abstraction representing the composition of data for a component"
       />
-      <h4 className="sb-section-item-heading">Provide context and mocking</h4>
-      <p className="sb-section-item-paragraph">Often when a story doesn't render, it's because your component is expecting a specific environment or context (like a theme provider) to be available.</p>
+      <div className="sb-section-item-heading">Provide context and mocking<div>
+      <div className="sb-section-item-paragraph">Often when a story doesn't render, it's because your component is expecting a specific environment or context (like a theme provider) to be available.</div>
       <a
         href="https://storybook.js.org/docs/writing-stories/decorators/?renderer=react#context-for-mocking"
         target="_blank"
@@ -80,10 +83,10 @@ export const RightArrow = () => <svg
         alt="A representation of typography and image assets" 
       />
       <div>
-        <h4 className="sb-section-item-heading">Load assets and resources</h4>
-        <p className="sb-section-item-paragraph">To link static files (like fonts) to your projects and stories, use the
+        <div className="sb-section-item-heading">Load assets and resources<div>
+        <div className="sb-section-item-paragraph">To link static files (like fonts) to your projects and stories, use the
         `staticDirs` configuration option to specify folders to load when
-        starting Storybook.</p>
+        starting Storybook.</div>
         <a
           href="https://storybook.js.org/docs/configure/images-and-assets/?renderer=react"
           target="_blank"
@@ -97,6 +100,7 @@ export const RightArrow = () => <svg
     # Do more with Storybook
 
     Now that you know the basics, let's explore other parts of Storybook that will improve your experience. This list is just to get you started. You can customise Storybook in many ways to fit your needs.
+
   </div>
 
   <div className="sb-section">
@@ -109,9 +113,9 @@ export const RightArrow = () => <svg
           src={Docs} 
           alt="A screenshot showing the autodocs tag being set, pointing a docs page being generated" 
         />
-        <h4 className="sb-section-item-heading">Autodocs</h4>
-        <p className="sb-section-item-paragraph">Auto-generate living,
-          interactive reference documentation from your components and stories.</p>
+        <div className="sb-section-item-heading">Autodocs<div>
+        <div className="sb-section-item-paragraph">Auto-generate living,
+          interactive reference documentation from your components and stories.</div>
         <a
           href="https://storybook.js.org/docs/writing-docs/autodocs/?renderer=react"
           target="_blank"
@@ -125,8 +129,8 @@ export const RightArrow = () => <svg
           src={Share} 
           alt="A browser window showing a Storybook being published to a chromatic.com URL" 
         />
-        <h4 className="sb-section-item-heading">Publish to Chromatic</h4>
-        <p className="sb-section-item-paragraph">Publish your Storybook to review and collaborate with your entire team.</p>
+        <div className="sb-section-item-heading">Publish to Chromatic<div>
+        <div className="sb-section-item-paragraph">Publish your Storybook to review and collaborate with your entire team.</div>
         <a
           href="https://storybook.js.org/docs/sharing/publish-storybook/?renderer=react#publish-storybook-with-chromatic"
           target="_blank"
@@ -140,9 +144,9 @@ export const RightArrow = () => <svg
           src={FigmaPlugin} 
           alt="Windows showing the Storybook plugin in Figma" 
         />
-        <h4 className="sb-section-item-heading">Figma Plugin</h4>
-        <p className="sb-section-item-paragraph">Embed your stories into Figma to cross-reference the design and live
-          implementation in one place.</p>
+        <div className="sb-section-item-heading">Figma Plugin<div>
+        <div className="sb-section-item-paragraph">Embed your stories into Figma to cross-reference the design and live
+          implementation in one place.</div>
         <a
           href="https://storybook.js.org/docs/sharing/design-integrations/?renderer=react#embed-storybook-in-figma-with-the-plugin"
           target="_blank"
@@ -156,9 +160,9 @@ export const RightArrow = () => <svg
           src={Testing} 
           alt="Screenshot of tests passing and failing" 
         />
-        <h4 className="sb-section-item-heading">Testing</h4>
-        <p className="sb-section-item-paragraph">Use stories to test a component in all its variations, no matter how
-          complex.</p>
+        <div className="sb-section-item-heading">Testing<div>
+        <div className="sb-section-item-paragraph">Use stories to test a component in all its variations, no matter how
+          complex.</div>
         <a
           href="https://storybook.js.org/docs/writing-tests/?renderer=react"
           target="_blank"
@@ -172,8 +176,8 @@ export const RightArrow = () => <svg
           src={Accessibility} 
           alt="Screenshot of accessibility tests passing and failing" 
         />
-        <h4 className="sb-section-item-heading">Accessibility</h4>
-        <p className="sb-section-item-paragraph">Automatically test your components for a11y issues as you develop.</p>
+        <div className="sb-section-item-heading">Accessibility<div>
+        <div className="sb-section-item-paragraph">Automatically test your components for a11y issues as you develop.</div>
         <a
           href="https://storybook.js.org/docs/writing-tests/accessibility-testing/?renderer=react"
           target="_blank"
@@ -187,8 +191,8 @@ export const RightArrow = () => <svg
           src={Theming} 
           alt="Screenshot of Storybook in light and dark mode" 
         />
-        <h4 className="sb-section-item-heading">Theming</h4>
-        <p className="sb-section-item-paragraph">Theme Storybook's UI to personalize it to your project.</p>
+        <div className="sb-section-item-heading">Theming<div>
+        <div className="sb-section-item-paragraph">Theme Storybook's UI to personalize it to your project.</div>
         <a
           href="https://storybook.js.org/docs/configure/theming/?renderer=react"
           target="_blank"
@@ -199,8 +203,8 @@ export const RightArrow = () => <svg
 </div>
 <div className='sb-addon'>
   <div className='sb-addon-text'>
-    <h4>Addons</h4>
-    <p className="sb-section-item-paragraph">Integrate your tools with Storybook to connect workflows.</p>
+    <div>Addons<div>
+    <div className="sb-section-item-paragraph">Integrate your tools with Storybook to connect workflows.</div>
     <a
         href="https://storybook.js.org/addons/"
         target="_blank"
@@ -234,12 +238,12 @@ export const RightArrow = () => <svg
       >Star on GitHub<RightArrow /></a>
     </div>
     <div className="sb-section-item">
-      <Image 
+      <Image
         width={33}
         height={32}
         layout="fixed"
-        src={Discord} 
-        alt="Discord logo" 
+        src={Discord}
+        alt="Discord logo"
         className="sb-explore-image"
       />
       <div>
@@ -252,12 +256,12 @@ export const RightArrow = () => <svg
       </div>
     </div>
     <div className="sb-section-item">
-      <Image 
+      <Image
         width={32}
         height={32}
         layout="fixed"
-        src={Youtube} 
-        alt="Youtube logo" 
+        src={Youtube}
+        alt="Youtube logo"
         className="sb-explore-image"
       />
       <div>
@@ -270,21 +274,22 @@ export const RightArrow = () => <svg
       </div>
     </div>
     <div className="sb-section-item">
-      <Image 
+      <Image
         width={33}
         height={32}
         layout="fixed"
-        src={Tutorials} 
-        alt="A book" 
+        src={Tutorials}
+        alt="A book"
         className="sb-explore-image"
       />
-      <p>Follow guided walkthroughs on for key workflows.</p>
+      <div>Follow guided walkthroughs on for key workflows.</div>
 
       <a
           href="https://storybook.js.org/tutorials/"
           target="_blank"
         >Discover tutorials<RightArrow /></a>
     </div>
+
 </div>
 
 <style>
